Aggiunta data_a e data_a per le prenotazioni, anche sulle API
